--- a/src/scss/textarea.scss
+++ b/src/scss/textarea.scss
@@ -33,6 +33,7 @@
   pre,
   & > div {
     margin: 10px 0;
+    line-height: 1.5;
   }
 
   ul, ol {
@@ -48,7 +49,7 @@
     list-style-type: disc;
   }
 
-  blockquote:not([class]) {
+  blockquote {
     display: block;
     border-left: 8px solid #d0e5f2;
     padding: 5px 10px;
